Don't irritate devs by using too-wide fields
A short is a short regardless of its sign.
Don't instantiate Integer.
Add overflow checks.